--- a/styles/style.css
+++ b/styles/style.css
@@ -41,7 +41,7 @@ p {
     border-color: transparent;
 }
 
-.tweet {
+.tweet-btn {
     background-color: #333;
     border-color: transparent !important;
 }
